--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
   		<artifactId>hibernate-core</artifactId>
   		<version>5.5.7.Final</version>
   	</dependency>
-  	</dependencies>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
+  </dependencies>
 </project>
