--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,15 @@
   		<artifactId>jstl</artifactId>
         <version>1.2</version>
     </dependency>
+    <dependency>
+    	<groupId>com.sun.faces</groupId>
+    	<artifactId>jsf-api</artifactId>
+    	<version>2.2.20</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.sun.faces</groupId>
+    	<artifactId>jsf-impl</artifactId>
+    	<version>2.2.20</version>
+    </dependency>
   </dependencies>
 </project>
